css fixálások a kezdőlapon és a store-on

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -15,108 +15,108 @@
         <button id="popupClose">OK</button>
     </div>
     {% endfor %}
-
-    <h1 class="text-center mt-5 mb-4">Dárídó webshop</h1>
-    <div class="container">
-        <div class="carousel">
-            <input type="radio" name="slides" checked="checked" id="slide-1">
-            <input type="radio" name="slides" id="slide-2">
-            <input type="radio" name="slides" id="slide-3">
-            <input type="radio" name="slides" id="slide-4">
-            <input type="radio" name="slides" id="slide-5">
-            <input type="radio" name="slides" id="slide-6">
-            <ul class="carousel__slides">
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel1.jpeg" alt="">
-                        </div>
-                        <figcaption>
-                            Üdvözlünk a Dáridó Webshopon
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel2.jpeg" alt="">
-                        </div>
-                        <figcaption>
-
-                            <span class="credit">Előadó(k):</span>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel3.webp" alt="">
-                        </div>
-                        <figcaption>
-                            A raktáros csapatunk
-                            <span class="credit">Előadó(k):</span>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel4.avif" alt="">
-                        </div>
-                        <figcaption>
-                            A szállítási ügyintézők
-                            <span class="credit">Előadó(k):</span>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel5.jpg" alt="">
-                        </div>
-                        <figcaption>
-                            Lagzi Lajcsi 17 éves korában az eslő áramkörével
-                            <span class="credit">Előadó(k):</span>
-                        </figcaption>
-                    </figure>
-                </li>
-                <li class="carousel__slide">
-                    <figure>
-                        <div>
-                            <img src="static\images\carousel6.jpeg" alt="">
-                        </div>
-                        <figcaption>
-                            Futáraink a legmodernebb szállítóeszközökkel hordják a megrendeléseket
-                            <span class="credit">Előadó(k):</span>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
-            <ul class="carousel__thumbnails">
-                <li>
-                    <label for="slide-1"><img src="static\images\carousel1.jpeg" alt=""></label>
-                </li>
-                <li>
-                    <label for="slide-2"><img src="static\images\carousel2.jpeg" alt=""></label>
-                </li>
-                <li>
-                    <label for="slide-3"><img src="static\images\carousel3.webp" alt=""></label>
-                </li>
-                <li>
-                    <label for="slide-4"><img src="static\images\carousel4.avif" alt=""></label>
-                </li>
-                <li>
-                    <label for="slide-5"><img src="static\images\carousel5.jpg" alt=""></label>
-                </li>
-                <li>
-                    <label for="slide-6"><img src="static\images\carousel6.jpeg" alt=""></label>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
     <div id="loginContent">
+        <h1 class="text-center mt-5 mb-4">Dárídó webshop</h1>
+        <div class="carouseltartó">
+            <div class="carousel">
+                <input type="radio" name="slides" checked="checked" id="slide-1">
+                <input type="radio" name="slides" id="slide-2">
+                <input type="radio" name="slides" id="slide-3">
+                <input type="radio" name="slides" id="slide-4">
+                <input type="radio" name="slides" id="slide-5">
+                <input type="radio" name="slides" id="slide-6">
+                <ul class="carousel__slides">
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel1.jpeg" alt="">
+                            </div>
+                            <figcaption>
+                                Üdvözlünk a Dáridó Webshopon
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel2.jpeg" alt="">
+                            </div>
+                            <figcaption>
+
+                                <span class="credit">Előadó(k):</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel3.webp" alt="">
+                            </div>
+                            <figcaption>
+                                A raktáros csapatunk
+                                <span class="credit">Előadó(k):</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel4.avif" alt="">
+                            </div>
+                            <figcaption>
+                                A szállítási ügyintézők
+                                <span class="credit">Előadó(k):</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel5.jpg" alt="">
+                            </div>
+                            <figcaption>
+                                Lagzi Lajcsi 17 éves korában az eslő áramkörével
+                                <span class="credit">Előadó(k):</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="carousel__slide">
+                        <figure>
+                            <div>
+                                <img src="static\images\carousel6.jpeg" alt="">
+                            </div>
+                            <figcaption>
+                                Futáraink a legmodernebb szállítóeszközökkel hordják a megrendeléseket
+                                <span class="credit">Előadó(k):</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+                <ul class="carousel__thumbnails">
+                    <li>
+                        <label for="slide-1"><img src="static\images\carousel1.jpeg" alt=""></label>
+                    </li>
+                    <li>
+                        <label for="slide-2"><img src="static\images\carousel2.jpeg" alt=""></label>
+                    </li>
+                    <li>
+                        <label for="slide-3"><img src="static\images\carousel3.webp" alt=""></label>
+                    </li>
+                    <li>
+                        <label for="slide-4"><img src="static\images\carousel4.avif" alt=""></label>
+                    </li>
+                    <li>
+                        <label for="slide-5"><img src="static\images\carousel5.jpg" alt=""></label>
+                    </li>
+                    <li>
+                        <label for="slide-6"><img src="static\images\carousel6.jpeg" alt=""></label>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <!-- Mit árulunk -->
         <h1 class="text-center mt-5 mb-4">Mit tudsz nálunk vásárolni?</h1>
         <div class="row masodikresz">
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -134,6 +134,8 @@
                 <img src="static\images\Zámbó Jimmy - Karácsony Jimmyvel (CD, 3990 Ft).jpg" class="img-fluid lemezkep" alt="">
             </div>
         </div>
+
+        <!-- Csapat tagjai -->
         <h1 class="text-center mt-5 mb-4">A csapat tagjai</h1>
         <div class="tartó">
             <div class="product">
