--- a/static/css/store.css
+++ b/static/css/store.css
@@ -55,8 +55,6 @@ body.dark .button-33.add-to-cart {
   font-weight: 500;
 }
 
-
-
 /* light*/
 
 #light {
@@ -77,7 +75,7 @@ body.dark .button-33.add-to-cart {
   display: flex;
 }
 
-#lightquick-view-name{
+#lightquick-view-name {
   color: #fff;
 }
 
@@ -156,7 +154,7 @@ body.dark .button-33.add-to-cart {
   display: flex;
 }
 
-#darkquick-view-name{
+#darkquick-view-name {
   color: #fff;
 }
 
@@ -228,17 +226,32 @@ body.dark .button-33.add-to-cart {
 }
 
 @media only screen and (max-width: 768px) {
-  .cardstore {
+  .lightcardstore {
     flex-direction: column;
   }
 
-  .cardstore .cardstore-img {
+  .lightcardstore .lightcardstore-img {
     width: 100%;
     order: 2;
   }
 
-  .cardstore .infók {
+  .lightcardstore .lightinfók {
+    width: 100%;
+    order: 1;
+  }
+
+  .darkcardstore {
+    flex-direction: column;
+  }
+
+  .darkcardstore .darkcardstore-img {
+    width: 100%;
+    order: 2;
+  }
+
+  .darkcardstore .darkinfók {
     width: 100%;
     order: 1;
   }
 }
+
