--- a/store/templates/store/profile.html
+++ b/store/templates/store/profile.html
@@ -17,7 +17,7 @@
                             {% if profile != self_profile %}
                             {% if profile in self_profile.follows.all %}
                             <div>
-                                <span class="bg-success p-1 px-4 rounded text-white">Követed ;D</span>
+                                <span class="bg-success p-1 px-4 rounded text-white">Követed</span>
                                 <button name="follow" value="unfollow;{{profile}}" type="submit" class="bx bx-user-minus unfollow_btn big_btn"></button>
                             </div>
                             {% else %}
@@ -46,7 +46,26 @@
                             <div class="div1">
                                 <h5 class="mt-2 mb-0">Követők:</h5>
                                 <div class="block">
-                                    <img src="" width="30" class="rounded-circle"><span class="span">1. Követő neve</span>
+                                    <form method=POST>
+                                        {% csrf_token %}
+                                        
+                                        {% for follower in profile.followers.all %}
+                                        
+                                        <div style="margin-top: 15px;"><a class="follower_a" href=" {% url 'profile' follower.user.id %}">
+                                            <img src="{{follower.imageURL}}" class="rounded-circle follower_img">
+                                            <span class="span follower_a">{{follower}}</span></a>
+    
+                                            {% if follower != self_profile %}
+                                                {% if follower in profile.follows.all %}
+                                                <button name="follow" value="unfollow;{{follower}}" type="submit" class="bx bx-user-minus unfollow_btn"></button>
+                                                {% else %}
+                                                <button name="follow" value="follow;{{follower}}" type="submit" class="bx bx-user-plus follow_btn"></button>
+                                                {% endif %}
+                                            {% endif %}
+                                        </div>
+                                        {% endfor %} 
+    
+                                    </form>
                                 </div>
                             </div>
                         
@@ -56,19 +75,20 @@
                                     {% csrf_token %}
                                     
                                     {% for following in profile.follows.all %}
-                                    {% if following != self_profile %}
+                                    
                                     
                                     <div style="margin-top: 15px;"><a class="follower_a" href=" {% url 'profile' following.user.id %}">
                                         <img src="{{following.imageURL}}" class="rounded-circle follower_img">
                                         <span class="span follower_a">{{following}}</span></a>
-
-                                        {% if following in self_profile.follows.all %}
-                                        <button name="follow" value="unfollow;{{following}}" type="submit" class="bx bx-user-minus unfollow_btn"></button>
-                                        {% else %}
-                                        <button name="follow" value="follow;{{following}}" type="submit" class="bx bx-user-plus follow_btn"></button>
+                                        {% if following != self_profile %}
+                                            {% if following in self_profile.follows.all %}
+                                            <button name="follow" value="unfollow;{{following}}" type="submit" class="bx bx-user-minus unfollow_btn"></button>
+                                            {% else %}
+                                            <button name="follow" value="follow;{{following}}" type="submit" class="bx bx-user-plus follow_btn"></button>
+                                            {% endif %}
                                         {% endif %}
                                     </div>
-                                    {% endif %}
+                                    
                                     {% endfor %} 
 
                                 </form>
