--- a/store/templates/store/profile.html
+++ b/store/templates/store/profile.html
@@ -28,8 +28,8 @@
                             {% endif %}   
                             {% endif %}
                         </form>
-                        <h4 class="mt-2 mb-0">{{profile.name}}</h4>
-                        <div class="block" style="margin-bottom: 20px;">
+                        <h4 class="mt-2 mb-0"><strong>{{profile.name}}</strong></h4>
+                        <div class="block" style="margin-bottom: 20px; font-weight: 500;">
                             {% if profile.email != None %}
                             <span class="span">{{profile.email}}</span>
                             {% endif %}
@@ -51,7 +51,7 @@
                                     <form form id="follower1" method=POST>
                                         {% csrf_token %}
                                         
-                                        {% for follower in profile.followers.all|slice:":1" %}
+                                        {% for follower in profile.followers.all|slice:":3" %}
                                         
                                         <div style="margin-top: 15px;"><a class="follower_a" href=" {% url 'profile' follower.user.id %}">
                                             <img src="{{follower.imageURL}}" class="rounded-circle follower_img">
@@ -88,7 +88,7 @@
                                         {% endfor %} 
     
                                     </form>
-                                    {% if profile.followers.all.count > 1 %}
+                                    {% if profile.followers.all.count > 3 %}
                                     <div id="morefollower" style="margin-top: 15px;">
                                         <button id="morefollowerBtn" class="bx bxs-down-arrow"></button>
                                         <span class="span follower_a">Több követés</span>
@@ -107,7 +107,7 @@
                                 <form id="following1" method=POST>
                                     {% csrf_token %}
                                     
-                                    {% for following in profile.follows.all|slice:":1" %}
+                                    {% for following in profile.follows.all|slice:":3" %}
                                     
                                     
                                     <div style="margin-top: 15px;"><a class="follower_a" href=" {% url 'profile' following.user.id %}">
@@ -142,7 +142,7 @@
                                     </div>
                                     {% endfor %}
                                 </form>
-                                {% if profile.follows.all.count > 1 %}
+                                {% if profile.follows.all.count > 3 %}
                                 <div id="morefollowing" style="margin-top: 15px;">
                                     <button id="morefollowingBtn" class="bx bxs-down-arrow"></button>
                                     <span class="span follower_a">Több követés</span>
@@ -162,13 +162,15 @@
         </div>
     </div>
     {% if profile == self_profile %}
+    {% if orders %}
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-7">
                 <div class="card p-3 py-4"> 
                     <div class="text-center mt-3">
-                        <h3 class="mt-2 mb-0">Rendeléseim:</h3>
+                        <h3 class="mt-2 mb-0"><strong>Rendeléseim:</strong></h3>
                         {% for order in orders %}
+                        {% if order.get_cart_total != 0 %}
                         <div class="sor">
                             <div class="div2">
                                 <h4 style="text-decoration: underline;" class="mt-2 mb-0">{{order}}</h4> 
@@ -188,6 +190,7 @@
                             {% endfor %}
                             </div>
                         </div>
+                        {% endif %}
                         {% endfor %}
                     </div>
                 </div>
@@ -195,25 +198,52 @@
         </div>
     </div>
     {% endif %}
+    {% endif %}
+    {% if posts %}
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-7">
-                <div class="card p-3 py-4"> 
+                <div class="card p-3 py-4">
                     <div class="text-center mt-3">
-                        <h4 class="mt-2 mb-0">Posztjaim:</h4>
-                        <div>
-                            <img class="orderphoto" src="" width="400" class="rounded-circle">
+                        <div style="margin-bottom: 50px;"><h4  class="mt-2 mb-0"><strong>Posztjaim:</strong></h4></div>
+                        {% for post in posts %}
+                        <div class="wrapper">
+                            <div class="card2">
+                            <div class="user">
+                                <div class="profile">
+                                <img src="{{post.profile.imageURL}}" class="ava">
+                                <div class="username">
+                                    <h3 class="uname">{{post.profile.user}}</h3>
+                                    <p class="name">{{post.title}}</p>
+                                </div>
+                                </div>
+                                <i class="fa-brands fa-twitter icon"></i>
+                            </div>
+                            <div class="twitt">
+                                <p>{{post.body}}</p>
+                            </div>
+                            <div class="insight">
+                                <div class="like">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g id="heart">
+                                    <path id="Vector" d="M20.84 4.61C20.3292 4.099 19.7228 3.69364 19.0554 3.41708C18.3879 3.14052 17.6725 2.99817 16.95 2.99817C16.2275 2.99817 15.5121 3.14052 14.8446 3.41708C14.1772 3.69364 13.5708 4.099 13.06 4.61L12 5.67L10.94 4.61C9.9083 3.57831 8.50903 2.99871 7.05 2.99871C5.59096 2.99871 4.19169 3.57831 3.16 4.61C2.1283 5.64169 1.54871 7.04097 1.54871 8.5C1.54871 9.95903 2.1283 11.3583 3.16 12.39L4.22 13.45L12 21.23L19.78 13.45L20.84 12.39C21.351 11.8792 21.7563 11.2728 22.0329 10.6054C22.3095 9.93789 22.4518 9.22249 22.4518 8.5C22.4518 7.77751 22.3095 7.0621 22.0329 6.39464C21.7563 5.72718 21.351 5.12075 20.84 4.61V4.61Z" stroke="white" stroke-opacity="0.6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+                                <p class="like-value">{{post.likes.all.count}}</p>
+                                </div>
+                                <div class="created">
+                                <p>{{post.created}}</p>
+                                </div>
+                            </div>
+                            </div>
                         </div>
-                        <div>
-                            <h4 class="mt-2 mb-0">Poszt címe</h4>
-                            <p class="fonts">A poszt hosszabb leírása. </p>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    {% endif %}
 </body>
 
 <script>
