Kezdőlap fejlesztése(cég), új logo

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -135,6 +135,35 @@
             </div>
         </div>
 
+        <!-- A Cég -->
+        <h1 class="text-center mt-5 mb-4">A Cég</h1>
+        <div class="row masodikresz">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img src="static\images\Dáridólogo.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h2>Üdvözlöm a Mulatós Zene Világában!</h2><br>
+                <p class="polo fs-5">Szeretnénk bemutatni Önnek cégünket, amely a mulatós zene szerelmeseinek kínál minőségi termékeket. Küldetésünk, hogy az igazi mulatós zenét kedvelők számára valódi élményt nyújtsunk, és lehetőséget adjunk nekik arra, hogy kedvenc művészeiket és dalokat viselhessék, illetve gyűjthessék.
+
+                    Webáruházunkban széles választékban találhatóak különböző CD-k, pólók, bögrék és ajándéktárgyak, amelyek mindegyike a mulatós zene legnagyobb alakjainak ihletett. Zámbó Jimmy-től a Lagzi Lajcsiig, Pataki Attilától a Kacor Feriig, valamint Bunyós Pityuig, nálunk mindent megtalál, amire a mulatós zene világában vágyik.
+
+                    Célunk, hogy ügyfeleink számára egyedülálló élményt nyújtsunk, és segítsük őket abban, hogy gyűjteményüket bővítsék és színesítsék a legjobb minőségű mulatós zenei termékekkel. Legyen részese Ön is ennek a különleges világnak, és fedezze fel webáruházunk kiváló kínálatát!</p>
+            </div>
+        </div>
+        <div class="row masodikresz">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h2>Fedezze fel a Mulatós Zenei Termékek Gazdag Világát!</h2><br>
+                <p class="lemezek fs-5">Ha a mulatós zene világában otthon érzi magát, akkor webáruházunkban garantáltan megtalálja, amit keres. Számos különböző termék várja Önt, hogy kifejezhesse szeretetét és lelkesedését kedvenc mulatós zenészek és dalok iránt.
+
+                    A CD-k, pólók, bögrék és ajándéktárgyak mindegyike a mulatós zene nagyjainak inspirációját tükrözi. Legyen szó egy különleges emlékről egy felejthetetlen koncertről, vagy egy kedves ajándékról egy barátnak vagy családtagjának, nálunk mindenki megtalálja a számára tökéletes mulatós zenei terméket.
+
+                    Böngésszen webáruházunkban, és fedezze fel a mulatós zenei termékek gazdag világát! Legyen részese ennek az élénk és vidám közösségnek, és tegye még emlékezetesebbé mulatós zenei élményeit a mi kiváló minőségű termékeinkkel!</p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <img src="static\images\Zámbó Jimmy - Karácsony Jimmyvel (CD, 3990 Ft).jpg" class="img-fluid lemezkep" alt="">
+            </div>
+        </div>
+
         <!-- Csapat tagjai -->
         <h1 class="text-center mt-5 mb-4">A csapat tagjai</h1>
         <div class="tartó">
